--- a/src/app/pages/compone/compone.component.html
+++ b/src/app/pages/compone/compone.component.html
@@ -1,1 +1,5 @@
-<p>compone works!</p>
+<div>
+  <h1>Component one</h1>
+  {{data}} <br><br>
+  <button (click)="onClick()">Send Message</button>
+</div>
