--- a/src/app/pages/comptwo/comptwo.component.html
+++ b/src/app/pages/comptwo/comptwo.component.html
@@ -1,1 +1,5 @@
-<p>comptwo works!</p>
+<div>
+  <h1>Component two</h1>
+  {{data}} <br><br>
+  <button (click)="onClick()">Send Message</button>
+</div>
