--- a/src/app/pages/compthree/compthree.component.html
+++ b/src/app/pages/compthree/compthree.component.html
@@ -1,1 +1,5 @@
-<p>compthree works!</p>
+<div>
+  <h1>Component three</h1>
+  {{data}} <br><br>
+  <button (click)="onClick()">Send Message</button>
+</div>
